--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-av": "13.10.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "@tanstack/react-query": "^5.28.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
@@ -26,7 +27,9 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "react-native-svg-transformer": "^1.3.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "serverless": "3.38.0",
+    "serverless-offline":"13.3.3"
   },
   "private": true
 }
